--- a/imroz/index.html
+++ b/imroz/index.html
@@ -33,7 +33,7 @@
         <div class="flex" id="landing-column-2">
           <span class="gradient-text landpage-title">Design Driven Development Your Web Products.</span>
         </div>
-        <div id="landing-column-3" class="card-container">
+        <div id="column-3" class="card-container">
             <div class="card">
                 <div>
                   <img class="card-icon" src="" alt="logo" />
@@ -79,7 +79,7 @@
           <h2>Services provide for you.</h2>
           <p>There are many variations of passages of Lorem lpsum available, but the majority have suffered alteration.</p>
         </div>
-        <div id="landing-column-3" class="card-container">
+        <div id="column-3" class="card-container">
           <div class="card">
               <div class="card-data">
               <div>
@@ -108,7 +108,7 @@
               </div>
           </div>
         </div>
-        <div id="landing-column-3" class="card-container">
+        <div id="column-3" class="card-container">
           <div class="card">
               <div class="card-data">
               <div>
@@ -146,7 +146,7 @@
           <h2>Some of our recent works</h2>
           <p>There are many variations of passages of Lorem lpsum available, but the majority have suffered alteration.</p>
         </div>
-        <div id="landing-column-3" class="card-container">
+        <div id="column-3" class="card-container">
           <div class="card">
             <img src="assets/images/app.jpg" width="400" height="500" alt="app-jpg" />
           </div>
@@ -166,7 +166,7 @@
           <h2>Our company Growth</h2>
           <p>We have grown strenght over the past 20 years.</p>
         </div>
-        <div id="landing-column-3" class="card-container">
+        <div id="column-3" class="card-container">
           <div class="card">
             <div class="card-data">
             <div>
@@ -228,7 +228,7 @@
           <h2>Latest News</h2>
           <p>There are many variations of passages of Lorem lpsum available, but the majority have suffered alteration.</p>
         </div>
-        <div id="landing-column-3" class="card-container">
+        <div id="column-3" class="card-container">
           <div class="card">
             <img src="assets/images/work.jpg" width="400" height="500" alt="work-jpg" />
             <div class="text-over-image">
@@ -259,7 +259,7 @@
           <span class="gradient-text gradient-small">Top clients</span>
           <h2>We worked with brands</h2>
         </div>
-        <div id="landing-column-3" class="card-container">
+        <div id="column-3" class="card-container">
           <div class="card">
             <img src="assets/images/web.jpg" width="205" height="205" alt="we-brands" />
           </div>
@@ -276,7 +276,7 @@
             <img src="assets/images/web.jpg" width="205" height="205" alt="we-brands" />
           </div>
         </div>
-        <div id="landing-column-3" class="card-container">
+        <div id="column-3" class="card-container">
           <div class="card">
             <img src="assets/images/web.jpg" width="205" height="205" alt="we-brands" />
           </div>
